src/objects/installreport__c.object
<CustomObject>
    <fields>
        <fullName>AMP_power__c</fullName>
        <label>AMP power</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_adress_install_report__c</fullName>
        <label>主管Email地址</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EquId__c</fullName>
        <formula>servicereport__r.Equipment__r.Id</formula>
        <label>#设备Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <formula>servicereport__r.Equipment__r.Name</formula>
        <label>设备序列号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipmentname__c</fullName>
        <formula>servicereport__r.Equipmentname__c</formula>
        <label>设备名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipmentunittype__c</fullName>
        <formula>servicereport__r.Equipmentunittype__c</formula>
        <label>设备型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>安装确认单</relationshipLabel>
        <relationshipName>kehu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备序列号</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>安装确认单</relationshipLabel>
        <relationshipName>xuliehao</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IR_power__c</fullName>
        <label>IR power</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceRequestType__c</fullName>
        <formula>servicereport__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>服务请求类型</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acceptor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>验收人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>onge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <formula>servicereport__r.customer__r.address__c</formula>
        <label>地址</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>arrivaldate__c</fullName>
        <label>到达日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>chiller_water_flow__c</fullName>
        <label>chiller water flow</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>completedate__c</fullName>
        <label>完成日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>contactsname__c</fullName>
        <formula>person__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#联系人</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer__c</fullName>
        <formula>servicereport__r.customer__r.Name</formula>
        <label>客户名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <formula>TEXT(person__r.department__c)</formula>
        <label>负责科室</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endtime__c</fullName>
        <label>具体结束工作时间</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gssdate__c</fullName>
        <label>跟手术时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hfmj__c</fullName>
        <label>能量测试HF（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hfnm__c</fullName>
        <label>能量测试HF（nm）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hometime__c</fullName>
        <label>具体到家时间</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>housing_temperature__c</fullName>
        <label>housing temperature</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>humidity_DP__c</fullName>
        <label>humidity DP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>humidity__c</fullName>
        <label>安装环境湿度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20%-29%</fullName>
                </value>
                <value>
                    <fullName>30%-45%</fullName>
                    <default>true</default>
                    <label>30%-45%</label>
                </value>
                <value>
                    <fullName>46%-55%</fullName>
                </value>
                <value>
                    <fullName>56%-65%</fullName>
                </value>
                <value>
                    <fullName>66%以上</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hvv__c</fullName>
        <label>能量测试HV（V）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>initialpressure__c</fullName>
        <label>气体参数/气瓶初始气压（Bar）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>install_time__c</fullName>
        <formula>(endtime__c  -  starttime__c)*24</formula>
        <label>装机时长（小时）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>instarecordtype__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#记录类型</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>intracavitypressure__c</fullName>
        <label>腔内气压（Bar）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isoperation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否需要跟手术</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>landline__c</fullName>
        <formula>person__r.landline__c</formula>
        <label>座机</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leavetime__c</fullName>
        <label>出发时间</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lfmj__c</fullName>
        <label>能量测试LF（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lfnm__c</fullName>
        <label>能量测试LF（nm）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>oniz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <formula>person__r.phone__c</formula>
        <label>手机</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postcode__c</fullName>
        <formula>servicereport__r.customer__r.postcode__c</formula>
        <label>邮编</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qiangzuidashuchunengliang__c</fullName>
        <label>腔最大输出能量（mj）</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>receptiontime__c</fullName>
        <label>验收时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>requestname__c</fullName>
        <formula>servicereport__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#服务请求名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requestowner__c</fullName>
        <formula>servicereport__r.secondperson__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#服务请求第二责任人</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requestowneremail__c</fullName>
        <formula>servicereport__r.Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#所有人邮箱</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requesttime__c</fullName>
        <formula>servicereport__r.requesttime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#服务请求时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>servicereport__c</fullName>
        <label>服务请求</label>
        <referenceTo>servicerequest__c</referenceTo>
        <relationshipName>OPhL</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>starttime__c</fullName>
        <label>具体开始工作时间</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>进行中</fullName>
                    <default>true</default>
                    <label>进行中</label>
                </value>
                <value>
                    <fullName>已完成</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>temperature_DP__c</fullName>
        <label>temperature DP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temperature__c</fullName>
        <label>安装环境温度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>18℃-24℃</fullName>
                    <default>true</default>
                    <label>18℃-24℃</label>
                </value>
                <value>
                    <fullName>25℃-28℃</fullName>
                </value>
                <value>
                    <fullName>29℃以上</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>traincase__c</fullName>
        <label>设备培训情况</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>设备操作</fullName>
                </value>
                <value>
                    <fullName>设备基本维护</fullName>
                </value>
                <value>
                    <fullName>设备使用安全</fullName>
                </value>
                <value>
                    <fullName>注意事项</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>traveltime__c</fullName>
        <formula>hometime__c  -  leavetime__c</formula>
        <label>出差时长（天）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>安装确认单</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>servicereport__c</columns>
        <columns>customer__c</columns>
        <columns>ServiceRequestType__c</columns>
        <columns>Equipmentunittype__c</columns>
        <columns>completedate__c</columns>
        <columns>receptiontime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>I-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>安装确认单</pluralLabel>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <description>附属设备、欧堡安装确认单</description>
        <label>附属设备、欧堡</label>
    </recordTypes>
    <recordTypes>
        <fullName>ZFZSB</fullName>
        <active>true</active>
        <description>准分子设备安装确认单</description>
        <label>准分子设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>feibai</fullName>
        <active>true</active>
        <label>飞白设备</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>isoperation</fullName>
        <active>true</active>
        <errorConditionFormula>isoperation__c &amp;&amp; ISNULL(  gssdate__c )</errorConditionFormula>
        <errorMessage>若勾选是否需要跟手术，则跟手术时间字段为必填</errorMessage>
    </validationRules>
</CustomObject>